# LaserTriangulationApp

./: CMakeLists.txt  LaserTriangulation.cmake  README.md
no_natID/camera/: CMakeLists.txt
no_natID/camera/src/: main.cpp
no_natID/extraction/: CMakeLists.txt
no_natID/extraction/src/: main.cpp
res/: main.xml
res/shaders/: First3D.frag  First3D.vert
src/: Application.h  Camera.h  Dialog3DSelect.h  DynTabView.h  FindLine.h  Height.h  LaserHeight.h  MainWindow.h  MenuBar.h  Program.h  Program2.h  ToolBar.h  View2D.h  View3D.h  View3DSelect.h  ViewCalib.h  ViewTestGL2.h
testData/ExtractedPoints/: data1.xml
testData/calibration/: calibration.xml
